# RGGT

./: .gitignore  Cargo.toml  DEVLOG.md  README.md  build.rs  make.bat
resources/maps/: main.rgl
resources/models/: piramide.rgm
src/: app.rs  main.rs  renderer.rs  teste.rs
src/entity/: object.rs  player.rs
src/graphic/: mod.rs  renderer.rs  texture.rs  visualrep.rs
src/logical/: mapa.rs  mod.rs
src/logical/entity/: object.rs  player.rs
src/object/: mod.rs  visualrep.rs
src/resources/: file_manager.rs  mod.rs
src/states/: main_menu_state.rs  map_selector_state.rs  mod.rs  play_state.rs
src/states/substates/: mod.rs  pause_sub_state.rs
src/ui/: hitbox.rs  mod.rs  solid_sprite.rs  text.rs
src/ui/menu/: button.rs
