[package]
name = "RGGT"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
winit = "0.30.11"
gl = "0.14.0"
glutin = "0.32.3"
raw-window-handle = "0.6.2"
glutin-winit = "0.5.0"
libm = "0.2.15"
image = "0.25.6"
freetype-rs = "0.38.0"
freetype-sys = {version = "0.23.0", features = ["bundled"]}

[build-dependencies]
gl_generator = "0.14"
cfg_aliases = "0.2.1"
